# gosteady-firmware

./: .gitignore  CMakeLists.txt  GOSTEADY_CONTEXT.md  Kconfig  README.md  SETUP.md  pm_static.yml  prj.conf  prj_cloud.conf  prj_field.conf  sysbuild.conf
algo/: README.md  __init__.py  characterization.py  compare_outdoor_vs_indoor.py  data_loader.py  diagnose_steps.py  distance_estimator.py  energy_estimator.py  evaluator.py  export_c_header.py  export_reference_vectors.py  filters.py  motion_gate.py  requirements.lock.txt  requirements.txt  roughness.py  run_auto_surface.py  run_cross_surface.py  run_path_comparison.py  run_phase3.py  run_roughness_experiment.py  run_summary.py  step_detector.py  stride_model.py
boards/: thingy91x_nrf9151_ns.overlay
bridge_fw/: PATCHES.md
bridge_fw/boards/: thingy91x_nrf5340_cpuapp.overlay
data collection and protocols/: GoSteady_Capture_Annotations_v1.xlsx  GoSteady_Capture_Protocol_v1.docx
src/: activation.c  activation.h  battery.c  battery.h  cellular.c  cellular.h  cloud.c  cloud.h  control.c  control.h  dump.c  dump.h  forensics.c  forensics.h  main.c  session.c  session.h  snippet.c  snippet.h  version.h
src/algo/: gosteady_algo_params.h  gs_filters.c  gs_filters.h  gs_motion_gate.c  gs_motion_gate.h  gs_pipeline.c  gs_pipeline.h  gs_roughness.c  gs_roughness.h  gs_step_detector.c  gs_step_detector.h
tests/host/: Makefile  test_loader.c  test_loader.h  test_main.c
tools/: capture.html  cleanup_device.py  control.py  flash_cert.py  ingest_capture.py  log_console.py  pull_sessions.py  read_session.py
(+5 files in other folders)
